Fix: correctly insert fixed and empty scope constraints